# haven

./: .gitignore  Cargo.toml  Makefile  README.md  attestation_response.txt  perf.data  perf.data.old
analysis/: README.md  TOKEN.md  Untitled.ipynb  __init__.py  analysis.py  analysis_config.yaml  aws_analysis.py  gpu_baseline.py  local_analysis.py  pyproject.toml  shared_plot_helpers.py  token_metrics_analyzer.py
analysis/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
analysis/benchmarks/: run_benchmarks.py
analysis/remote_experiments/comp-constant-8b/: llama3_8b_8bit_toxicity.analysis_100.parquet  llama_classification.parquet
analysis/remote_experiments/enclave4b/: llama_summaries.parquet
analysis/remote_experiments/host4b/: llama_summaries.parquet  llama_toxic.analysis.parquet
attestation/: Cargo.toml  hello.py
attestation/src/: error.rs  lib.rs  main.rs  validate.rs
bert_runner/: Cargo.toml  Dockerfile  README.md
bert_runner/src/: actor.rs  lib.rs  main.rs  mock_runner.rs  runner.rs  score.rs
diagrams/: eval.mermaid
enclave/: Cargo.toml  Dockerfile.enclave  README.md
enclave/src/: attestation.rs  client.rs  evaluation_client.rs  evaluation_server.rs  llama_runner.rs  main.rs  server.rs  vsock.rs
enclave_typestate/: Cargo.toml  Dockerfile.enclave
enclave_typestate/src/: client_state.rs  client_vsock.rs  main.rs  messages.rs  server_state.rs  server_vsock.rs  typestate.rs  vsock.rs
evaluation/: Cargo.toml  Dockerfile  Dockerfile.enclave  analysis_results.parquet  llama3_7b_4bit_toxicity_analysis.parquet  llama3_7b_8bit_toxicity_analysis.parquet  llama3_7b_analysis.parquet  llama_classification.parquet  llama_classification_1.parquet  llama_summaries_20.parquet  llama_summaries_4bit.parquet  llama_toxicity_1.parquet
evaluation/comp-constant-8b/: llama3_7b_4bit_toxicity.parquet  llama3_8b_8bit_toxicity_100.parquet  llama_classification3.parquet  llama_summaries_8bit.parquet
evaluation/model/: config.json
evaluation/src/: client.rs  client_state.rs  config.rs  dataset.rs  file_transfer.rs  lib.rs  main.rs  main_client.rs  main_server.rs  merge.rs  messages.rs  progress.rs  server.rs  server_state.rs  util.rs  writer.rs
evaluation/src/protocol/: messages.rs
evaluation/src/tasks/: classification.rs  mod.rs  summarization.rs  toxicity.rs
evaluation_enclave/: Cargo.toml  Dockerfile
evaluation_enclave/src/: enclave.rs  main.rs
evaluation_host/: Cargo.toml  llama_summaries.parquet  llama_toxic.analysis.parquet  perf.data  perf.data.old
evaluation_host/src/: host.rs  main.rs
gpu-baseline/: summarization.py  toxicity.py
gpu_baseline/: README.md  __init__.py  classification.py  config.py  run_benchmarks.py
llama-rs/: Cargo.toml
llama-rs/src/: llamacpp.rs  llamacpp2-full.rs  main.rs  main3.rs
llama_runner/: Cargo.toml
llama_runner/src/: actor.rs  config.rs  lib.rs  main.rs  runner.rs
quantization/: README.md
quantization/docker/: Dockerfile
scripts/: install_nitro.sh  stop_ec2_instance.sh
scripts/ec2/: build_eif.sh  install_nitro.sh  launch_ec2_instance.sh  run_enclave.sh  stop_ec2_instance.sh
scripts/hf/: download_hf_file_in_repo.py
scripts/llama/: quantize.py  quantize.sh  test_inference.py
scripts/macos/: install_libtorch.sh
scripts/vm/: test_vsock.sh  test_vsock_sample.sh
toxicity/: Dockerfile  README.md  hello.py  main.py  pyproject.toml  uv.dockerfile
verify_attestation/: README.md  attestation_response.txt  main.py  pyproject.toml
verify_attestation/attestation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
vsock/: Cargo.toml
vsock-protocol/: Cargo.toml
vsock-protocol/src/: client.rs  file_transfer.rs  handler.rs  io.rs  lib.rs  protocol.rs  server.rs
vsock/async/: Cargo.toml  Dockerfile.enclave  Dockerfile.host  Makefile  README.md  haven
vsock/async/src/: main.rs
vsock/example/vsock_sample/rs/: Dockerfile.client  Makefile  vsock-sample
vsock/src/: handler.rs  io.rs  lib.rs
vsock/tokio/: Makefile
vsock/tokio/build_scripts/: build.sh  install_rust.sh
vsock/tokio/test_client/: Cargo.toml
vsock/tokio/test_client/src/: main.rs
vsock/tokio/test_server/src/: main.rs
vsock/tokio/tests/: vsock.rs
vsock_example/vsock_sample/py/: vsock-sample.py
