[workspace]
members = [    
    "llama_runner",
    "enclave",
    "attestation",
    "bert_runner",
    "evaluation", 
    "vsock"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.95"
llama-cpp-2 = "0.1.69"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1.28", features = ["full"] }
tokio-vsock = "0.7.0"
serde_bytes = "0.11.15"
serde = { version = "1.0", features = ["derive"] }