[package]
name = "attestation"
version = "0.1.1"
edition = "2018"
authors = ["Chris Schnabl"]
description = "TODO"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_bytes = { workspace = true }
serde = { workspace = true }
sha2 = "0.10.8"
openssl = "0.10.68"
serde_json = "1.0.137"
serde_cbor = "0.11.2"
webpki = "0.22.4"
chrono = { version = "0.4.39", features = ["serde"] }
hex = "0.4.3"
thiserror = "2.0.11"
aws-nitro-enclaves-cose = "0.5.2"
x509-parser = "0.16.0"
itertools = "0.14.0"
tee-attestation-verifier = "0.1.4"
base64 = "0.22.1"

# For attestation
[dependencies.nsm-driver]
git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git"
rev = "4f468c4"

[dependencies.nsm-io]
git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git"
rev = "4f468c4"

[lib]
name = "attestation"
path = "src/lib.rs"

[[bin]]
name = "attestation"
path = "src/main.rs"
