[package]
name = "bert_runner"
version = "0.1.1"
edition = "2018"
authors = ["Chris Schnabl"]
description = "TODO"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
llama-cpp-2 = { workspace = true }
# llama-cpp-2 = "0.1.90"
# FUck we need the newest version for BERT to work 
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lib]
name = "bert_runner"
path = "src/lib.rs"

[[bin]]
name = "bert_runner_example"
path = "src/main.rs"