[package]
name = "enclave"
version = "0.1.1"
authors = ["Chris Schnabl"]
description = "TODO"
license = "Apache-2.0"
edition = "2018"

[dependencies]
llama_runner = { path = "../llama_runner" }
clap = { version = "4.0", features = ["derive"] }
futures = "0.3.5"
libc = "0.2.79"
tokio-vsock = "0.7.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.17.9"
anyhow = { workspace = true }
llama-cpp-2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_bytes = "0.11.15"
sha2 = "0.10.8"

# For attestation
[dependencies.nsm-driver]
git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git"
rev = "4f468c4"

[dependencies.nsm-io]
git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git"
rev = "4f468c4"
