[package]
name = "enclave"
version = "0.1.1"
authors = ["Chris Schnabl"]
description = "TODO"
license = "Apache-2.0"
edition = "2018"

[dependencies]
llama_runner = { path = "../llama_runner" }
attestation = { path = "../attestation" }

anyhow = { workspace = true }
tokio = { workspace = true }
llama-cpp-2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bincode = "1.3"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3.5"
indicatif = "0.17.9"
libc = "0.2.79"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = { workspace = true }
tokio-vsock = "0.7.0"

# To verify attestation
# Fuck this does not work
#[dependencies.aws-nitro-enclaves-attestation]
#git = "https://github.com/ppmag/aws-nitro-enclaves-attestation.git"
#rev = "83ca872"