[package]
name = "enclave_typestate"
version = "0.1.1"
authors = ["Chris Schnabl"]
description = "TODO"
license = "Apache-2.0"
edition = "2018"

[dependencies]
llama_runner = { path = "../llama_runner" }
attestation = { path = "../attestation" }
bert_runner = { path = "../bert_runner", features = ["use_rust_bert"] }

hex = "0.4.3"
anyhow = { workspace = true } 
tokio = { workspace = true }
llama-cpp-2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bincode = "1.3"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3.5"
indicatif = "0.17.9"
libc = "0.2.79"
serde = { workspace = true }
serde_bytes = { workspace = true }
tokio-vsock = "0.7.0"
tee-attestation-verifier = "0.1.4"
structopt = "0.3.26"
