[package]
name = "evaluation"
version = "0.1.1"
authors = ["Chris Schnabl"]
description = "TODO"
license = "Apache-2.0"
edition = "2018"

[dependencies]
bert_runner = { path = "../bert_runner", features = ["use_rust_bert"] }
rust-bert = { version = "0.23.0" }
llama_runner = { path = "../llama_runner"}
anyhow = { workspace = true } 
tokio = { workspace = true }
tokio-vsock = { workspace = true }
tracing = "0.1"
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17.9"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = { workspace = true }
csv = "1.3"
reqwest = { version = "0.12", features = ["blocking"] }
arrow = "50.0.0"
parquet = "50.0.0"
rand = "0.9.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0.140"
