[package]
name = "evaluation_host"
version = "0.1.1"
authors = ["Chris Schnabl"]
description = "TODO"
license = "Apache-2.0"
edition = "2018"

[dependencies]
vsock = { path = "../vsock" } 
evaluation = { path = "../evaluation" }

hex = "0.4.3"
anyhow = { workspace = true } 
tokio = { workspace = true }
tokio-vsock = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tee-attestation-verifier = "0.1.4"
structopt = "0.3.26"

[[bin]]
name = "haven-host"
path = "src/main.rs"