# TODO find better name

[package]
name = "vsock-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
bincode = "1.3"
tokio-vsock = "0.3"
futures = "0.3"
libc = "0.2" 
# TODO look for common main dependencies 