[package]
name = "test_program"
version = "0.1.1"
authors = ["Chris Schnabl"]
description = "TODO"
license = "Apache-2.0"
edition = "2018"

[dependencies]
clap = "2.33.0"
futures = "0.3.5"
libc = "0.2.79"
# llama-cpp-2 = { version = "0.1.69"}
# Cannot use this, type mismatch with rust version 
# 553 | ...TemplateError>(CStr::from_ptr(buff.as_mut_ptr()).to_string_lossy().to_st...
# llama-cpp-2 = { version = "0.1.86"}
llama_cpp = "0.3.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "fs"] }
tokio-vsock = "0.7.0"

# sudo apt install clang libclang-dev