[package]
name = "test_program"
version = "0.1.1"
authors = ["Chris Schnabl"]
description = "TODO"
license = "Apache-2.0"
edition = "2018"

[dependencies]
clap = "2.33.0"
futures = "0.3.5"
libc = "0.2.79"
llama-cpp-2 = { version = "0.1.69"}
anyhow = "1.0.95"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "fs"] }
tokio-vsock = "0.7.0"