[package]
name = "haven"
version = "0.1.1"
authors = ["Chris Schnabl"]
description = "TODO"
license = "Apache-2.0"
edition = "2018"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
futures = "0.3.5"
libc = "0.2.79"
llama-cpp-2 = { version = "0.1.69"}
anyhow = "1.0.95"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "fs"] }
tokio-vsock = "0.7.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.17.9"

# For attestation
[dependencies.nsm-driver]
git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git"
rev = "4f468c4"

[dependencies.nsm-io]
git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git"
rev = "4f468c4"